testing with google speech to text. downloading audio file using yt_dlp and submitting it into Google speech to text is tested.

--- a/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
+++ b/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
@@ -23,76 +23,6 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-06T10:44:59.107819Z",
-     "start_time": "2024-08-06T10:44:58.315101Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "import subprocess\n",
-    "\n",
-    "def download_audio(youtube_url, output_file):\n",
-    "    command = [\n",
-    "        'yt-dlp', ' -x ', 'bestaudio', '--extract-audio', '--audio-format', 'wav',\n",
-    "        '--output', output_file, youtube_url\n",
-    "    ]\n",
-    "    result = subprocess.run(command, text=True, capture_output=True)\n",
-    "    return result\n",
-    "\n",
-    "result = download_audio('https://www.youtube.com/watch?v=UPrkC1LdlLY', 'audio.wav')"
-   ],
-   "id": "e13d740d70362c3c",
-   "outputs": [],
-   "execution_count": 13
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-06T10:45:00.257170Z",
-     "start_time": "2024-08-06T10:45:00.240179Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "print(result.stdout)",
-   "id": "c5a72398132170c3",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "execution_count": 14
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-06T10:45:01.467200Z",
-     "start_time": "2024-08-06T10:45:01.447191Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "result.stdout",
-   "id": "4a2938cc771cbd5b",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 15
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2024-08-06T13:03:04.827318Z",
      "start_time": "2024-08-06T13:03:04.441123Z"
     }
@@ -184,12 +114,115 @@
    "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-10T04:51:33.383598Z",
+     "start_time": "2024-08-10T04:51:32.305231Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "import yt_dlp\n",
+    "\n",
+    "def download_audio(youtube_url, output_file):\n",
+    "    ydl_opts = {\n",
+    "        'format': 'bestaudio/best',  # Select the best available audio quality\n",
+    "        'outtmpl': output_file,  # Output file name and path\n",
+    "    }\n",
+    "\n",
+    "    with yt_dlp.YoutubeDL(ydl_opts) as ydl:\n",
+    "        ydl.download([youtube_url])\n",
+    "        \n",
+    "    return True"
+   ],
+   "id": "85515c2ad2da6ca",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "85515c2ad2da6ca"
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-10T04:52:50.481553Z",
+     "start_time": "2024-08-10T04:52:46.882612Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# URL of the YouTube video\n",
+    "video_url = 'https://www.youtube.com/watch?v=CDZ9REOh2xA'\n",
+    "\n",
+    "# Download subtitle\n",
+    "download_audio(video_url, 'audio.mp3')"
+   ],
+   "id": "8c255b977665f15e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[youtube] Extracting URL: https://www.youtube.com/watch?v=CDZ9REOh2xA\n",
+      "[youtube] CDZ9REOh2xA: Downloading webpage\n",
+      "[youtube] CDZ9REOh2xA: Downloading ios player API JSON\n",
+      "[youtube] CDZ9REOh2xA: Downloading web creator player API JSON\n",
+      "[youtube] CDZ9REOh2xA: Downloading m3u8 information\n",
+      "[info] CDZ9REOh2xA: Downloading 1 format(s): 251\n",
+      "[download] Destination: audio.mp3\n",
+      "[download] 100% of    6.53MiB in 00:00:00 at 13.00MiB/s  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-10T05:27:41.220084Z",
+     "start_time": "2024-08-10T05:27:38.080320Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "\n",
+    "audio_file_path = r\"audio.mp3\"\n",
+    "\n",
+    "ffmpeg_path = r\"C:\\Users\\Sudheera\\Documents\\ffmpeg-n6.1-latest-win64-gpl-6.1\\ffmpeg-n6.1-latest-win64-gpl-6.1\\bin\"\n",
+    "os.environ['PATH'] += os.pathsep + ffmpeg_path\n",
+    "    \n",
+    "import io\n",
+    "from pydub import AudioSegment\n",
+    "\n",
+    "# Read the audio file into memory using io.BytesIO\n",
+    "with open(audio_file_path, 'rb') as audio_file:\n",
+    "    audio_data = io.BytesIO(audio_file.read())\n",
+    "\n",
+    "    # Load the audio from the in-memory file\n",
+    "    audio = AudioSegment.from_file(audio_data, format=\"mp3\")\n",
+    "    \n",
+    "    # Print the sampling rate\n",
+    "    print(f\"Sampling Rate: {audio.frame_rate} Hz\")"
+   ],
+   "id": "b38922ae5e56f7f2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sampling Rate: 11025 Hz\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
