postprocessors part added to the audio download part

--- a/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
+++ b/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
@@ -6,14 +6,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-06T10:44:57.886155Z",
-     "start_time": "2024-08-06T10:44:57.865584Z"
+     "end_time": "2024-08-11T03:46:31.667989Z",
+     "start_time": "2024-08-11T03:46:31.640232Z"
     }
    },
    "source": [
     "import json\n",
     "import os\n",
     "\n",
+    "# download ffmpeg (https://www.ffmpeg.org/download.html) and set the path\n",
     "ffmpeg_path = r\"C:\\Users\\Sudheera\\Documents\\ffmpeg-n6.1-latest-win64-gpl-6.1\\ffmpeg-n6.1-latest-win64-gpl-6.1\\bin\"\n",
     "os.environ['PATH'] += os.pathsep + ffmpeg_path\n",
     "\n",
@@ -21,13 +22,19 @@
     "    data = json.load(f)"
    ],
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 1. Download subtitles from YouTube",
+   "id": "948dc3f6289df5f"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-06T13:03:04.827318Z",
-     "start_time": "2024-08-06T13:03:04.441123Z"
+     "end_time": "2024-08-11T03:46:35.271766Z",
+     "start_time": "2024-08-11T03:46:34.106494Z"
     }
    },
    "cell_type": "code",
@@ -51,19 +58,19 @@
    ],
    "id": "159f99bccafc0d",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-06T13:05:06.275890Z",
-     "start_time": "2024-08-06T13:04:58.662697Z"
+     "end_time": "2024-08-11T03:46:50.249025Z",
+     "start_time": "2024-08-11T03:46:38.245591Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# URL of the YouTube video\n",
-    "video_url = 'https://www.youtube.com/watch?v=tRsxLLghL1k&ab_channel=LexClips'\n",
+    "video_url = 'https://www.youtube.com/watch?v=CDZ9REOh2xA'\n",
     "\n",
     "# Download subtitle\n",
     "download_subtitles(video_url)"
@@ -74,12 +81,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[youtube] Extracting URL: https://www.youtube.com/watch?v=tRsxLLghL1k&ab_channel=LexClips\n",
-      "[youtube] tRsxLLghL1k: Downloading webpage\n",
-      "[youtube] tRsxLLghL1k: Downloading ios player API JSON\n",
-      "[youtube] tRsxLLghL1k: Downloading tv player API JSON\n",
-      "[youtube] tRsxLLghL1k: Downloading m3u8 information\n",
-      "[info] tRsxLLghL1k: Downloading subtitles: en\n"
+      "[youtube] Extracting URL: https://www.youtube.com/watch?v=CDZ9REOh2xA\n",
+      "[youtube] CDZ9REOh2xA: Downloading webpage\n",
+      "[youtube] CDZ9REOh2xA: Downloading ios player API JSON\n",
+      "[youtube] CDZ9REOh2xA: Downloading web creator player API JSON\n",
+      "[youtube] CDZ9REOh2xA: Downloading m3u8 information\n",
+      "[info] CDZ9REOh2xA: Downloading subtitles: en\n"
      ]
     },
     {
@@ -93,34 +100,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[info] Testing format 616\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: ffmpeg not found. The downloaded format may not be the best available. Installing ffmpeg is strongly recommended: https://github.com/yt-dlp/yt-dlp#dependencies\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[info] tRsxLLghL1k: Downloading 1 format(s): 18\n",
-      "[info] Writing video subtitles to: Elon_Musk_on_xAI_-_We_will_win_Lex_Fridman_Podcast.en.vtt\n",
-      "[download] Destination: Elon_Musk_on_xAI_-_We_will_win_Lex_Fridman_Podcast.en.vtt\n",
-      "[download] 100% of  219.35KiB in 00:00:01 at 157.45KiB/s\n"
+      "[info] CDZ9REOh2xA: Downloading 1 format(s): 616+251\n",
+      "[info] Writing video subtitles to: Elon_Musk_s_approach_to_problem-solving_Lex_Fridman_Podcast.en.vtt\n",
+      "[download] Destination: Elon_Musk_s_approach_to_problem-solving_Lex_Fridman_Podcast.en.vtt\n",
+      "[download] 100% of   68.77KiB in 00:00:00 at 76.26KiB/s\n"
      ]
     }
    ],
    "execution_count": 3
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 2. Download audio file from Youtube and transcribe it using Google Speech to Text",
+   "id": "26a1fea838f2bee7"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-10T04:51:33.383598Z",
-     "start_time": "2024-08-10T04:51:32.305231Z"
+     "end_time": "2024-08-11T03:49:05.486432Z",
+     "start_time": "2024-08-11T03:49:05.473708Z"
     }
    },
    "cell_type": "code",
@@ -130,6 +129,10 @@
     "def download_audio(youtube_url, output_file):\n",
     "    ydl_opts = {\n",
     "        'format': 'bestaudio/best',  # Select the best available audio quality\n",
+    "        'postprocessors': [{\n",
+    "            'key': 'FFmpegExtractAudio',\n",
+    "            'preferredcodec': 'mp3'  # You can change this to 'wav', 'm4a', etc.\n",
+    "        }],\n",
     "        'outtmpl': output_file,  # Output file name and path\n",
     "    }\n",
     "\n",
@@ -140,22 +143,19 @@
    ],
    "id": "85515c2ad2da6ca",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-10T04:52:50.481553Z",
-     "start_time": "2024-08-10T04:52:46.882612Z"
+     "end_time": "2024-08-11T03:50:42.245843Z",
+     "start_time": "2024-08-11T03:50:11.417461Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# URL of the YouTube video\n",
-    "video_url = 'https://www.youtube.com/watch?v=CDZ9REOh2xA'\n",
-    "\n",
-    "# Download subtitle\n",
-    "download_audio(video_url, 'audio.mp3')"
+    "# Download Audio\n",
+    "download_audio(video_url, 'audio_new')"
    ],
    "id": "8c255b977665f15e",
    "outputs": [
@@ -169,8 +169,10 @@
       "[youtube] CDZ9REOh2xA: Downloading web creator player API JSON\n",
       "[youtube] CDZ9REOh2xA: Downloading m3u8 information\n",
       "[info] CDZ9REOh2xA: Downloading 1 format(s): 251\n",
-      "[download] Destination: audio.mp3\n",
-      "[download] 100% of    6.53MiB in 00:00:00 at 13.00MiB/s  \n"
+      "[download] Destination: audio_new\n",
+      "[download] 100% of    6.53MiB in 00:00:07 at 928.98KiB/s \n",
+      "[ExtractAudio] Destination: audio_new.mp3\n",
+      "Deleting original file audio_new (pass -k to keep)\n"
      ]
     },
     {
@@ -179,23 +181,23 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-10T05:27:41.220084Z",
-     "start_time": "2024-08-10T05:27:38.080320Z"
+     "end_time": "2024-08-11T03:50:51.786709Z",
+     "start_time": "2024-08-11T03:50:49.736149Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "audio_file_path = r\"audio.mp3\"\n",
+    "audio_file_path = r\"audio_new.mp3\"\n",
     "    \n",
     "import io\n",
     "from pydub import AudioSegment\n",
@@ -216,11 +218,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sampling Rate: 11025 Hz\n"
+      "Sampling Rate: 48000 Hz\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "5932cda93eb99883"
   }
  ],
  "metadata": {
