information added about csv and json files

--- a/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
+++ b/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
@@ -226,11 +226,90 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 3. Transcribe the audio using Google Speech to Text",
+   "id": "7a7fc1baff0b1d07"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "5932cda93eb99883"
+   "id": "ee2a796579bec41f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 4. Pre-process downloaded transcript",
+   "id": "3d034672ae2e960d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# After transcribing an audio file you can download a csv file and a Json file from Google Speech-to-text\n",
+    "# csv :- transcript, confidence, speaker tag, language code, start time, end time (some words can be wrong)\n",
+    "# json :- Additional information you have here is the confidence of each word\n",
+    "\n",
+    "# first we will read files separately and create one dataframe with necessary data \n",
+    "\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "csv_file = 'audio.csv'\n",
+    "json_file = 'audio.json'\n",
+    "\n",
+    "csv_column_names = {\n",
+    "    'Start time': 'start_time',\n",
+    "    'End time': 'end_time',\n",
+    "    'Language code': 'language_code',\n",
+    "    'Confidence': 'confidence',\n",
+    "    'Channel': 'channel',\n",
+    "    'Speaker tag': 'speaker_tag',\n",
+    "    'Transcript': 'transcript'\n",
+    "}\n",
+    "\n",
+    "# Json file format :- \n",
+    "# {\n",
+    "#    \"results\": [\n",
+    "#        { \"alternatives\": [\n",
+    "#               {\n",
+    "#                   \"confidence\": _\n",
+    "#                   \"transcript\": _\n",
+    "#                   \"words\": [\n",
+    "#                       {\n",
+    "#                           \"confidence\": _,\n",
+    "#                           \"endTime\": _,\n",
+    "#                           \"startTime\": _,\n",
+    "#                           \"word\": _\n",
+    "#                       }, ...\n",
+    "#           ],\n",
+    "#           \"languageCode\": _,\n",
+    "#           \"resultEndTime\": _\n",
+    "#       }, ...\n",
+    "#       ...\n",
+    "#       ...\n",
+    "#       {                                           <- last item of the list (after all transcriptions)\n",
+    "#           \"alternatives\": {\n",
+    "#               \"words\": [\n",
+    "#                   {\n",
+    "#                      \"confidence\": _,\n",
+    "#                      \"endTime\": _,\n",
+    "#                      \"speakerLabel\": _,\n",
+    "#                      \"speakerTag\": _,\n",
+    "#                      \"startTime\": _,\n",
+    "#                      \"word\": _\n",
+    "#                   },....                          <- one item for each word\n",
+    "#               ]\n",
+    "#           }\n",
+    "#       }\n",
+    "#   ]\n",
+    "# }"
+   ],
+   "id": "ce32b5256bfb3727"
   }
  ],
  "metadata": {
