less confident words handling started

--- a/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
+++ b/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
@@ -783,14 +783,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T06:15:05.209427Z",
-     "start_time": "2024-08-14T06:15:05.187822Z"
+     "end_time": "2024-08-14T14:14:20.909952Z",
+     "start_time": "2024-08-14T14:14:20.832758Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# merge two dataframes \n",
     "transcript_merged_df = pd.merge(transcript_df, transcript_json_df, on='hashed_transcript', how='left', suffixes=('_csv', '_json'))\n",
+    "transcript_merged_df.sort_values(by='start_time', inplace=True)\n",
     "transcript_merged_df"
    ],
    "id": "68ecae2f824a3101",
@@ -1034,12 +1035,57 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 5. Changing less confident words and combining the transcript into one conversation",
+   "id": "16d5619be5649ef8"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-14T14:18:58.176790Z",
+     "start_time": "2024-08-14T14:18:58.149492Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "with open('vars.json') as f:\n",
+    "  data = json.load(f)\n",
+    "\n",
+    "openai_api_key = data[\"open_ai_api_key\"]\n",
+    "langchain_api_key = data[\"langchain_api_key\"]\n",
+    "# tavily_api_key = data[\"tavily_api_key\"]\n",
+    "groq_api_key = data[\"groq_api_key\"]"
+   ],
+   "id": "62d8f19d15eb2451",
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-14T14:22:36.133322Z",
+     "start_time": "2024-08-14T14:22:32.404337Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from langchain_agents._models import get_llm\n",
+    "\n",
+    "llm_llama3 = get_llm(llm_type='llama3', llm_model='llama3-70b-8192', api_key=groq_api_key)\n",
+    "llm_gpt = get_llm(llm_type='gpt', llm_model='gpt-3.5-turbo', api_key=openai_api_key)"
+   ],
+   "id": "45563d5cc48d0180",
+   "outputs": [],
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -1047,7 +1093,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "b7327110e99e31b1"
+   "id": "49d8fe3b19375a8"
   }
  ],
  "metadata": {
