small chain created to handle less confident words

--- a/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
+++ b/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
@@ -249,8 +249,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T06:07:41.240151Z",
-     "start_time": "2024-08-14T06:07:40.043353Z"
+     "end_time": "2024-08-16T08:12:50.190340Z",
+     "start_time": "2024-08-16T08:12:49.116763Z"
     }
    },
    "cell_type": "code",
@@ -321,8 +321,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T06:14:15.375193Z",
-     "start_time": "2024-08-14T06:14:15.347696Z"
+     "end_time": "2024-08-16T08:12:50.267285Z",
+     "start_time": "2024-08-16T08:12:50.193348Z"
     }
    },
    "cell_type": "code",
@@ -534,18 +534,18 @@
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T06:14:19.459093Z",
-     "start_time": "2024-08-14T06:14:19.449551Z"
+     "end_time": "2024-08-16T08:12:50.282842Z",
+     "start_time": "2024-08-16T08:12:50.269275Z"
     }
    },
    "cell_type": "code",
@@ -560,13 +560,13 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T06:14:19.920495Z",
-     "start_time": "2024-08-14T06:14:19.905973Z"
+     "end_time": "2024-08-16T08:12:50.314302Z",
+     "start_time": "2024-08-16T08:12:50.284841Z"
     }
    },
    "cell_type": "code",
@@ -587,13 +587,13 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T06:14:20.476922Z",
-     "start_time": "2024-08-14T06:14:20.423415Z"
+     "end_time": "2024-08-16T08:12:50.376315Z",
+     "start_time": "2024-08-16T08:12:50.318299Z"
     }
    },
    "cell_type": "code",
@@ -773,18 +773,18 @@
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T14:14:20.909952Z",
-     "start_time": "2024-08-14T14:14:20.832758Z"
+     "end_time": "2024-08-16T08:12:50.407820Z",
+     "start_time": "2024-08-16T08:12:50.379827Z"
     }
    },
    "cell_type": "code",
@@ -1035,12 +1035,12 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -1051,8 +1051,28 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T14:18:58.176790Z",
-     "start_time": "2024-08-14T14:18:58.149492Z"
+     "end_time": "2024-08-16T08:18:38.204174Z",
+     "start_time": "2024-08-16T08:18:38.192363Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "podcast_name = \"Lex Fridman Podcast\"\n",
+    "podcast_topic = \"Elon Musk's approach to problem-solving\"\n",
+    "podcast_people = \"Lex Fridman, Elon Musk\"\n",
+    "\n",
+    "transcript = \"Can you just speak to what it takes for great engineering team for you? What I saw in Memphis the supercomputer cluster is just this intense drive towards simplifying the\"\n",
+    "less_confident_words = \"[{'word': 'the', 'index_in_transcript': 19}, {'word': 'supercomputer', 'index_in_transcript': 20}, {'word': 'is', 'index_in_transcript': 22}]\""
+   ],
+   "id": "b9e074ba5f602ed",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-16T08:18:39.167897Z",
+     "start_time": "2024-08-16T08:18:39.141682Z"
     }
    },
    "cell_type": "code",
@@ -1067,13 +1087,13 @@
    ],
    "id": "62d8f19d15eb2451",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T14:22:36.133322Z",
-     "start_time": "2024-08-14T14:22:32.404337Z"
+     "end_time": "2024-08-16T08:18:43.826189Z",
+     "start_time": "2024-08-16T08:18:40.475869Z"
     }
    },
    "cell_type": "code",
@@ -1085,7 +1105,110 @@
    ],
    "id": "45563d5cc48d0180",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-16T08:21:20.666783Z",
+     "start_time": "2024-08-16T08:21:20.644113Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "handle_less_confident_words_system_prompt = f\"\"\"\\\n",
+    "You are an expert at casual, conversational english language. \\\n",
+    "You have been provided with a transcript of a podcast between two people. \\\n",
+    "The transcript has been generated using Google Speech-to-Text. \\\n",
+    "\n",
+    "Information about podcast: \\\n",
+    "1. Name of the podcast: \"{podcast_name}\" \\\n",
+    "2. Topic of the podcast: \"{podcast_topic}\" \\\n",
+    "3. People in the podcast: \"{podcast_people}\" \\\n",
+    "\n",
+    "You have been provided with these: \\\n",
+    "{{less_confident_words}} - less_confident_words (a list of json objects) \\\n",
+    "{{transcript}} - transcript (a string) \\\n",
+    "\n",
+    "In less_confident_words json string, you have been provided less confident words with their index in the transcript. \\\n",
+    "(index of the first word in the transcript is 0) \\\n",
+    "\n",
+    "These are the tasks you need to perform: \\\n",
+    "1. You have to have a look at less_confident_words and figure out those words has to be changed or not. \\\n",
+    "2. If you think the word has to be changed, you have to change it to a more suitable word. \\\n",
+    "3. You have to review the transcript and make the conversation sound more natural. \\\n",
+    "\"\"\"\n",
+    "\n",
+    "handle_less_confident_words_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", handle_less_confident_words_system_prompt),\n",
+    "        (\"human\", \"The less_confident_words is : {{less_confident_words}}. The transcript is : {{transcript}}.\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "chain = handle_less_confident_words_prompt | llm_llama3 | StrOutputParser()"
+   ],
+   "id": "49d8fe3b19375a8",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-16T08:21:24.137814Z",
+     "start_time": "2024-08-16T08:21:22.245853Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "result = chain.invoke({\n",
+    "    \"less_confident_words\": less_confident_words,\n",
+    "    \"transcript\": transcript\n",
+    "})"
+   ],
+   "id": "4b120d5e33691032",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-16T08:21:58.325333Z",
+     "start_time": "2024-08-16T08:21:58.312265Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(result)",
+   "id": "8046b0112c7725cf",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the provided transcript and less_confident_words, I'll review and make the necessary changes to make the conversation sound more natural.\n",
+      "\n",
+      "The transcript is: \"Can you just speak to what it takes for great engineering team for you? What I saw in Memphis the supercomputer cluster is just this intense drive towards simplifying the -\"\n",
+      "\n",
+      "The less_confident_words are: [{'word': 'the', 'index_in_transcript': 19}, {'word': 'supercomputer', 'index_in_transcript': 20}, {'word': 'is', 'index_in_transcript': 22}]\n",
+      "\n",
+      "After reviewing the transcript and less_confident_words, I suggest the following changes:\n",
+      "\n",
+      "1. The word \"the\" at index 19 seems correct in the context, so no change is needed.\n",
+      "2. The word \"supercomputer\" at index 20 seems correct in the context, so no change is needed.\n",
+      "3. The word \"is\" at index 22 could be changed to \"was\" to make the sentence more grammatically correct and natural-sounding.\n",
+      "\n",
+      "Here's the revised transcript:\n",
+      "\n",
+      "\"Can you just speak to what it takes for a great engineering team for you? What I saw in Memphis, this supercomputer cluster was just this intense drive towards simplifying things...\"\n",
+      "\n",
+      "I added an article \"a\" before \"great engineering team\" to make the sentence more natural. I also added a comma after \"Memphis\" to improve sentence flow. Finally, I changed \"is\" to \"was\" as mentioned earlier, and added \"things\" at the end of the sentence to make it more complete and natural-sounding.\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -1093,7 +1216,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "49d8fe3b19375a8"
+   "id": "7c15741069caaca1"
   }
  ],
  "metadata": {
